# ecommerce-bot

./: .gitignore  README.md  console.py  main.py  pyproject.toml
data/: products.json
docs/: architecture.md
examples/: test_conversations.md
src/: chatbot.py  console.py  database.py  initialize_vector_store.py  main.py  schema.py
src/agents/: __init__.py  orchestrator.py  order_agent.py  rag_agent.py
src/database/: __init__.py  orders.py  products.py  products_vector_store.py
src/utils/: __init__.py  logger.py  spinner.py
